# vbm_rust_backup

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: rust.yml
src/: backup.rs  getcreds.rs  httpmethods.rs  jobs.rs  main.rs  restore.rs  showtable.rs
src/models/: credsmodel.rs  jobsmodel.rs  mod.rs  othermodels.rs  repomodel.rs  servermodels.rs
tests/: cli.rs  creds_test.json
