[package]
name = "vbm_rust_backup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "^0.11", features = ["blocking", "json"] }
tokio = { version = "^1", features = ["full"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_urlencoded = "^0.7"
spinners = "^3.1.0"
base64 = "^0.13.0"

[lib]
name = "jobs"
path = "src/jobs.rs"