[package]
name = "vbm_rust_backup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "^0.11", features = ["json"] }
tokio = { version = "^1", features = ["full"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_urlencoded = "^0.7"
spinners = "^3.1.0"
base64 = "^0.13.0"
anyhow = "1.0.57"
chrono = "0.4.22"
dialoguer = "0.10.2"
thiserror = "1.0.37"
clap = { version = "4.0.8", features = ["derive"] }
colored = "2"
comfy-table = "6.1.0"
magic-crypt = "3.1.10"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1